--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -143,31 +143,49 @@
 
 
       <!-- Marketing Dropdown -->
-      <li>
-        <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2">📣 Marketing</span>
-          <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M6 9l6 6 6-6" />
-          </svg>
-        </button>
-        <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">📊 Marketing Dashboard</a></li>
-          <li><a href="/admin/leads" class="block px-3 py-2 rounded hover:bg-gray-100">👥 Leads</a></li>
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">📣 Marketing</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li><a href="/admin/marketing" class="block px-3 py-2 rounded hover:bg-gray-100">📊 Marketing Dashboard</a></li>
+    <li><a href="/admin/leads" class="block px-3 py-2 rounded hover:bg-gray-100">👥 Leads</a></li>
 
-          <li><a href="/admin/campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Campaign Builder</a></li>
-          <li><a href="/admin/automations" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ Automation Flows</a></li>
-          <li><a href="/admin/retargeting" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Retargeting & Funnels</a></li>
-          <li><a href="/admin/ads" class="block px-3 py-2 rounded hover:bg-gray-100">📢 Ad Manager</a></li>
-          <li><a href="/admin/sms" class="block px-3 py-2 rounded hover:bg-gray-100">📲 SMS Campaigns</a></li>
-          <li><a href="/admin/email" class="block px-3 py-2 rounded hover:bg-gray-100">📧 Email Blasts</a></li>
-          <li><a href="/admin/social" class="block px-3 py-2 rounded hover:bg-gray-100">📅 Social Scheduler</a></li>
-          <li><a href="/admin/seo" class="block px-3 py-2 rounded hover:bg-gray-100">🔍 SEO Tools</a></li>
-          <li><a href="/admin/blog" class="block px-3 py-2 rounded hover:bg-gray-100">✍️ Blog & Content</a></li>
-          <li><a href="/admin/ai-marketing" class="block px-3 py-2 rounded hover:bg-gray-100">🤖 AI Copy Generator</a></li>
-          <li><a href="/admin/ai-audience" class="block px-3 py-2 rounded hover:bg-gray-100">🧠 Smart Audience Builder</a></li>
-          <li><a href="/admin/analytics" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Campaign Analytics</a></li>
-        </ul>
-      </li>
+    <li><a href="/admin/campaigns" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Campaign Builder</a></li>
+    <li><a href="/admin/automations" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ Automation Flows</a></li>
+    <li><a href="/admin/retargeting" class="block px-3 py-2 rounded hover:bg-gray-100">🎯 Retargeting & Funnels</a></li>
+
+    <!-- Promotions -->
+    <li><a href="/admin/discounts" class="block px-3 py-2 rounded hover:bg-gray-100">🏷️ Discounts</a></li>
+    <li><a href="/admin/coupons" class="block px-3 py-2 rounded hover:bg-gray-100">🎟️ Coupon Codes</a></li>
+    <li><a href="/admin/referrals" class="block px-3 py-2 rounded hover:bg-gray-100">🤝 Referral Program</a></li>
+    <li><a href="/admin/gift-cards" class="block px-3 py-2 rounded hover:bg-gray-100">🎁 Gift Cards</a></li>
+
+    <!-- Outreach -->
+    <li><a href="/admin/ads" class="block px-3 py-2 rounded hover:bg-gray-100">📢 Ad Manager</a></li>
+    <li><a href="/admin/sms" class="block px-3 py-2 rounded hover:bg-gray-100">📲 SMS Campaigns</a></li>
+    <li><a href="/admin/email" class="block px-3 py-2 rounded hover:bg-gray-100">📧 Email Blasts</a></li>
+    <li><a href="/admin/social" class="block px-3 py-2 rounded hover:bg-gray-100">📅 Social Scheduler</a></li>
+
+    <!-- SEO & Content -->
+    <li><a href="/admin/seo" class="block px-3 py-2 rounded hover:bg-gray-100">🔍 SEO Tools</a></li>
+    <li><a href="/admin/blog" class="block px-3 py-2 rounded hover:bg-gray-100">✍️ Blog & Content</a></li>
+
+    <!-- Feedback -->
+    <li><a href="/admin/reviews" class="block px-3 py-2 rounded hover:bg-gray-100">⭐ Customer Reviews</a></li>
+
+    <!-- AI -->
+    <li><a href="/admin/ai-marketing" class="block px-3 py-2 rounded hover:bg-gray-100">🤖 AI Copy Generator</a></li>
+    <li><a href="/admin/ai-audience" class="block px-3 py-2 rounded hover:bg-gray-100">🧠 Smart Audience Builder</a></li>
+
+    <!-- Analytics -->
+    <li><a href="/admin/analytics" class="block px-3 py-2 rounded hover:bg-gray-100">📈 Campaign Analytics</a></li>
+  </ul>
+</li>
+
 
       <!-- AI Tools Dropdown -->
       <li>
